[tool.poetry]
name = "OsciJtag"
version = "0.1.0"
description = ""
authors = ["Dan Fritchman <dan@fritch.mn>"]

[tool.poetry.dependencies]
python = "^3.8"
pyftdi = "^0.53.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
